# embs

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml
.sdd/: CONSTITUTION.md
src/embs/: cli.py
src/embs/fetchers/: __init__.py  base.py  confluence.py  markdown.py
src/embs/indexer/: __init__.py  chunker.py  embedder.py  store.py
src/embs/searcher/: __init__.py  query.py  reranker.py
tests/: conftest.py
tests/fetchers/: test_confluence.py  test_markdown.py
tests/indexer/: test_chunker.py  test_embedder.py  test_store.py
tests/searcher/: test_query.py  test_reranker.py
